--- a/location.html
+++ b/location.html
@@ -7,12 +7,7 @@
     <title>Little Lemon</title>
 </head>
 <body>
-    <h1>Our Menu</h1>
-    <h2>Falafel</h2>
-    <p>Chickpeas, herbs and spices</p>
-    <h2>Pasta Salad</h2>
-    <p>Lettuce, vegetables and mozzarella</p>
-    <br/>
-    <a href="location.html">Our Location</a>
+    <h1>Our Location</h1>
+    <p>123 Home Road, Main District, Capital City</p>
 </body>
 </html>
