--- a/src/index.html
+++ b/src/index.html
@@ -10,10 +10,9 @@
     <h1>Our Menu</h1>
     <h2>Falafel</h2>
     <p>Chickpeas, herbs and spices</p>
-    <img src="falafel.jpeg" width="240" height="135" alt="falafel" />
+    <img src="falafel_2.jpeg">
     <h2>Pasta Salad</h2>
     <p>Lettuce, vegetables and mozzarella</p>
-    <img src="pasta_salad.jpeg" width="240" height="135" alt="pasta salad" />
     <br/>
     <a href="location.html">Our Location</a>
     <table>
