--- a/src/index.html
+++ b/src/index.html
@@ -10,9 +10,10 @@
     <h1>Our Menu</h1>
     <h2>Falafel</h2>
     <p>Chickpeas, herbs and spices</p>
-    <img src="falafel_2.jpeg">
+    <img src="/images/falafel_2.jpeg" width="240" height="135" alt="Falafel" >
     <h2>Pasta Salad</h2>
     <p>Lettuce, vegetables and mozzarella</p>
+    <img src="/images/pasta_salad.png" width="240" height="135" alt="Falafel" >
     <br/>
     <a href="location.html">Our Location</a>
     <table>
@@ -23,7 +24,6 @@
         <tr>
 <td>Falafel</td>
 <td>$10.00</td>
-
         </tr>
         <tr>
 <td>Pasta Salad</td>
