--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,14 @@
     <img src="/images/pasta_salad.png" width="240" height="135" alt="Falafel" >
     <br/>
     <a href="location.html">Our Location</a>
+    <br/>
+    <br/>
+    <style>
+        table, th, td { 
+           border: 1px solid black;
+           border-collapse: collapse; 
+        }
+    </style>
     <table>
         <tr>
             <th>Dish</th>
