--- a/src/index.html
+++ b/src/index.html
@@ -5,25 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Little Lemon</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <div class="center-text">
     <h1>Our Menu</h1>
-    <h2>Falafel</h2>
+    <h2>Falafel <span>NEW</span></h2>
     <p>Chickpeas, herbs and spices</p>
     <img src="/images/falafel_2.jpeg" width="240" height="135" alt="Falafel" >
     <h2>Pasta Salad</h2>
     <p>Lettuce, vegetables and mozzarella</p>
-    <img src="/images/pasta_salad.png" width="240" height="135" alt="Falafel" >
+    <img src="/images/pasta_salad.png" width="240" height="135" alt="Pasta Salad" >
+    <br/>
     <br/>
     <a href="location.html">Our Location</a>
     <br/>
     <br/>
-    <style>
-        table, th, td { 
-           border: 1px solid black;
-           border-collapse: collapse; 
-        }
-    </style>
     <table>
         <tr>
             <th>Dish</th>
@@ -38,5 +35,6 @@
 <td>$12.00</td>
         </tr>
     </table>
+  </div>
 </body>
 </html>
