--- a/src/index.html
+++ b/src/index.html
@@ -6,27 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Little Lemon</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
-  <div class="center-text">
-    <h1>Our Menu</h1>
-    <h2>Falafel <span>NEW</span></h2>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-6">
+      <h1>Our Menu</h1>
+    <h2 class="mt-4">Falafel <span>NEW</span></h2>
     <p>Chickpeas, herbs and spices</p>
-    <img src="/images/falafel_2.jpeg" width="240" height="135" alt="Falafel" >
-    <h2>Pasta Salad</h2>
+    <img src="/images/falafel_2.jpeg" class="img-fluid" width="240" height="135" alt="Falafel" >
+    <h2 class="mt-5">Pasta Salad</h2>
     <p>Lettuce, vegetables and mozzarella</p>
-    <img src="/images/pasta_salad.png" width="240" height="135" alt="Pasta Salad" >
+    <img src="/images/pasta_salad.png" class="img-fluid"width="240" height="135" alt="Pasta Salad" >
+  </div>
+</div>
     <br/>
     <br/>
-    <a href="location.html">Our Location</a>
-    <br/>
-    <br/>
-    <table>
-        <tr>
-            <th>Dish</th>
-            <th>Price</th>
-        </tr>
-        <tr>
+    <div class="col-lg-6">
+        <h2>Price</h2>
+     <table class="table"> 
+      <tr> 
 <td>Falafel</td>
 <td>$10.00</td>
         </tr>
@@ -35,6 +35,9 @@
 <td>$12.00</td>
         </tr>
     </table>
+    </div>
+    <a href="location.html">Our Location</a>
   </div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
