--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 <body>
   <div class="container">
     <div class="row">
-      <div class="col-lg-6">
+      <div class="col-12 col-lg-6">
       <h1>Our Menu</h1>
     <h2 class="mt-4">Falafel <span>NEW</span></h2>
     <p>Chickpeas, herbs and spices</p>
@@ -23,7 +23,7 @@
 </div>
     <br/>
     <br/>
-    <div class="col-lg-6">
+    <div class="col-12 col-lg-4">
         <h2>Price</h2>
      <table class="table"> 
       <tr> 
