--- a/src/index.html
+++ b/src/index.html
@@ -12,18 +12,23 @@
   <div class="container">
     <div class="row">
       <div class="col-12 col-lg-6">
+        <div class="text-center">
       <h1>Our Menu</h1>
-    <h2 class="mt-4">Falafel <span>NEW</span></h2>
+      </div>
+      </div>
+    </div>
+      <div class="row"> 
+      <div class="col-12 col-lg-6">
+    <h2>Falafel <span>NEW</span></h2>
     <p>Chickpeas, herbs and spices</p>
     <img src="/images/falafel_2.jpeg" class="img-fluid" width="240" height="135" alt="Falafel" >
-    <h2 class="mt-5">Pasta Salad</h2>
+    <h2 >Pasta Salad</h2>
     <p>Lettuce, vegetables and mozzarella</p>
     <img src="/images/pasta_salad.png" class="img-fluid"width="240" height="135" alt="Pasta Salad" >
   </div>
 </div>
-    <br/>
-    <br/>
-    <div class="col-12 col-lg-4">
+<div class="row">
+    <div class="col-12 col-lg-6">
         <h2>Price</h2>
      <table class="table"> 
       <tr> 
@@ -36,8 +41,9 @@
         </tr>
     </table>
     </div>
+    </div>
     <a href="location.html">Our Location</a>
-  </div>
+</div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
