Removed style.css content. Added cards and alerts.

--- a/src/index.html
+++ b/src/index.html
@@ -11,20 +11,34 @@
 <body>
   <div class="container">
     <div class="row">
-      <div class="col-12 col-lg-6">
-        <div class="text-center">
+      <div class="col">
       <h1>Our Menu</h1>
-      </div>
-      </div>
+        <div class="col-12 col-lg-6">
+          <div class="card"> 
+            <img src="/images/falafel_2.jpeg" class="card-img-top" width="240" height="135" alt="Falafel" >
+              <div class="card-body">
+                <h2 class="card-title">Falafel</h2>
+                <p class="card-text">Chickpeas, herbs and spices</p>
+              </div>
+        </div>
+  </div>
+  <div class="col-12 col-lg-6">
+    <div class="card"> 
+    <img src="/images/pasta_salad.png" class="card-img-top" width="240" height="135" alt="Pasta Salad" >
+    <div class="card-body">
+      <h2 class="card-title">Pasta Salad</h2>
+      <p class="card-text">Lettuce, vegetables and mozzarella</p>
+    </div>  
+  </div>
+</div>
+<div class="col-12 col-lg-6">
+    <div class="card"> 
+      <img src="/images/fried_calamari.jpeg" class="card-img-top" width="240" height="135" alt="Pasta Salad" >
+      <div class="card-body">
+        <h2 class="card-title">Fried Calamari <span class="badge bg-primary">New</span></h2>
+        <p class="card-text">Squid, buttermilk</p>
+      </div>  
     </div>
-      <div class="row"> 
-      <div class="col-12 col-lg-6">
-    <h2>Falafel <span>NEW</span></h2>
-    <p>Chickpeas, herbs and spices</p>
-    <img src="/images/falafel_2.jpeg" class="img-fluid" width="240" height="135" alt="Falafel" >
-    <h2 >Pasta Salad</h2>
-    <p>Lettuce, vegetables and mozzarella</p>
-    <img src="/images/pasta_salad.png" class="img-fluid"width="240" height="135" alt="Pasta Salad" >
   </div>
 </div>
 <div class="row">
@@ -39,7 +53,18 @@
 <td>Pasta Salad</td>
 <td>$12.00</td>
         </tr>
+        <tr>
+          <td>  
+            Fried Calamri
+          </td>
+          <td>
+            S12.00
+          </td>
+        </tr>
     </table>
+    <div class="alert alert-info" role="alert">
+      Try our new Fried Calamari
+    </div>
     </div>
     </div>
     <a href="location.html">Our Location</a>
