--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
       <h1>Our Menu</h1>
         <div class="col-12 col-lg-6">
           <div class="card"> 
-            <img src="/images/falafel_2.jpeg" class="card-img-top" width="240" height="135" alt="Falafel" >
+            <img src="/images/falafel_2.jpeg" class="card-img-top" alt="Falafel" >
               <div class="card-body">
                 <h2 class="card-title">Falafel</h2>
                 <p class="card-text">Chickpeas, herbs and spices</p>
@@ -24,7 +24,7 @@
   </div>
   <div class="col-12 col-lg-6">
     <div class="card"> 
-    <img src="/images/pasta_salad.png" class="card-img-top" width="240" height="135" alt="Pasta Salad" >
+    <img src="/images/pasta_salad.png" class="card-img-top" alt="Pasta Salad" >
     <div class="card-body">
       <h2 class="card-title">Pasta Salad</h2>
       <p class="card-text">Lettuce, vegetables and mozzarella</p>
@@ -33,7 +33,7 @@
 </div>
 <div class="col-12 col-lg-6">
     <div class="card"> 
-      <img src="/images/fried_calamari.jpeg" class="card-img-top" width="240" height="135" alt="Pasta Salad" >
+      <img src="/images/fried_calamari.jpeg" class="card-img-top" alt="Pasta Salad" >
       <div class="card-body">
         <h2 class="card-title">Fried Calamari <span class="badge bg-primary">New</span></h2>
         <p class="card-text">Squid, buttermilk</p>
