--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,16 @@
 <body>
   <div class="container">
     <div class="row">
-      <div class="col">
-      <h1>Our Menu</h1>
+      <div class="col-12">
+        <div class="text-center">
+        <h1>Our Menu</h1>
+        <div class="alert alert-info" role="alert">
+            Our restaurant will be closed on New Year's Day.
+        </div>
+    </div>
+    </div>
+    </div>
+    <div class="row">
         <div class="col-12 col-lg-6">
           <div class="card"> 
             <img src="/images/falafel_2.jpeg" class="card-img-top" alt="Falafel" >
@@ -67,6 +75,13 @@
     </div>
     </div>
     </div>
+    <div class="row">
+      <div class="col-12 col-lg-6">
+          <div class="text-center">
+              <button type="button" class="btn btn-primary">Order Online</button>
+          </div>
+      </div>
+  </div>
     <a href="location.html">Our Location</a>
 </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
